Fix category headers with parents not showing on articles

--- a/style.css
+++ b/style.css
@@ -295,6 +295,7 @@ p#wp-email-button {
     font-size: .85em;
     margin-left: 0;
     margin-right:1em;
+    margin-bottom: 0;
 }
 
 .inner-footer:not(.inline-list) ul li {
